feat: adiciona documentacao post e get all
