# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
                 "operationId": "listStudents",
                 "responses": {
                     "200": {
-                        "description": "List of students retrieved successfully",
+                        "description": "Listagem realizada com sucesso",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -25,9 +25,41 @@
                                                 "type": "integer",
                                                 "example": 1
                                             },
-                                            "name": {
+                                            "nome": {
                                                 "type": "string",
-                                                "example": "John Doe"
+                                                "example": "João Silva"
+                                            },
+                                            "idade": {
+                                                "type": "integer",
+                                                "example": 20
+                                            },
+                                            "nota_primeiro_semestre": {
+                                                "type": "number",
+                                                "format": "float",
+                                                "example": 8.5
+                                            },
+                                            "nota_segundo_semestre": {
+                                                "type": "number",
+                                                "format": "float",
+                                                "example": 7.9
+                                            },
+                                            "nome_professor": {
+                                                "type": "string",
+                                                "example": "Professor A"
+                                            },
+                                            "numero_sala": {
+                                                "type": "integer",
+                                                "example": 101
+                                            },
+                                            "created_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2024-08-21T18:20:07.000000Z"
+                                            },
+                                            "updated_at": {
+                                                "type": "string",
+                                                "format": "date-time",
+                                                "example": "2024-08-21T18:20:07.000000Z"
                                             }
                                         },
                                         "type": "object"
@@ -37,7 +69,112 @@
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error"
+                        "description": "Erro interno no servidor"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Alunos"
+                ],
+                "summary": "Cadastra um novo aluno",
+                "operationId": "createStudent",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "nome": {
+                                        "type": "string",
+                                        "example": "João Silva"
+                                    },
+                                    "idade": {
+                                        "type": "integer",
+                                        "example": 20
+                                    },
+                                    "nota_primeiro_semestre": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 8.5
+                                    },
+                                    "nota_segundo_semestre": {
+                                        "type": "number",
+                                        "format": "float",
+                                        "example": 7.9
+                                    },
+                                    "nome_professor": {
+                                        "type": "string",
+                                        "example": "Professor A"
+                                    },
+                                    "numero_sala": {
+                                        "type": "integer",
+                                        "example": 101
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Cadastro realizado com sucesso",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "nome": {
+                                            "type": "string",
+                                            "example": "João Silva"
+                                        },
+                                        "idade": {
+                                            "type": "integer",
+                                            "example": 20
+                                        },
+                                        "nota_primeiro_semestre": {
+                                            "type": "number",
+                                            "format": "float",
+                                            "example": 8.5
+                                        },
+                                        "nota_segundo_semestre": {
+                                            "type": "number",
+                                            "format": "float",
+                                            "example": 7.9
+                                        },
+                                        "nome_professor": {
+                                            "type": "string",
+                                            "example": "Professor A"
+                                        },
+                                        "numero_sala": {
+                                            "type": "integer",
+                                            "example": 101
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-08-21T18:20:07.000000Z"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-08-21T18:20:07.000000Z"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Dados inválidos"
+                    },
+                    "500": {
+                        "description": "Erro interno no servidor"
                     }
                 }
             }
